--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "better-auth": "1.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "concurrently": "^9.2.1",
     "convex": "^1.31.7",
     "next": "16.1.4",
